[gd_scene load_steps=5 format=3 uid="uid://ceaqepbc5e307"]

[ext_resource type="PackedScene" uid="uid://occ6mj4y5ipe" path="res://user_interface/menu/options_menu/options_menu.tscn" id="1_bc75u"]
[ext_resource type="Script" path="res://user_interface/menu/pause_menu/pause_menu.gd" id="1_r4sd6"]
[ext_resource type="Script" path="res://user_interface/menu/components/button/ui_button.gd" id="2_tbbdw"]
[ext_resource type="PackedScene" uid="uid://bf4j8sjvm0un8" path="res://user_interface/menu/pause_menu/confirmation_modal/confirmation_modal.tscn" id="3_fgkka"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r4sd6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.290196, 0.290196, 0.290196, 0.764706)

[node name="MarginContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="PauseMenuTitle" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/PauseMenuTitle"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/PauseMenuTitle"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "Paused Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenuButtons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/PauseMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"
script = ExtResource("2_tbbdw")

[node name="RestartButton" type="Button" parent="MarginContainer/PauseMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart"
script = ExtResource("2_tbbdw")

[node name="OptionsButton" type="Button" parent="MarginContainer/PauseMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Options"
script = ExtResource("2_tbbdw")

[node name="MainMenuButton" type="Button" parent="MarginContainer/PauseMenuButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main Menu
"
script = ExtResource("2_tbbdw")

[node name="OptionsMenu" parent="." instance=ExtResource("1_bc75u")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="MainMenuConfirmation" parent="." instance=ExtResource("3_fgkka")]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 1
modalTitle = "Go back to main menu?"

[node name="RestartConfirmation" parent="." instance=ExtResource("3_fgkka")]
unique_name_in_owner = true
visible = false
layout_mode = 1
modalTitle = "Do you want to restart game ?"

[connection signal="pressed" from="MarginContainer/PauseMenuButtons/ResumeButton" to="." method="onPressedResumeButton"]
[connection signal="pressed" from="MarginContainer/PauseMenuButtons/RestartButton" to="." method="onPressedRestartButton"]
[connection signal="pressed" from="MarginContainer/PauseMenuButtons/OptionsButton" to="." method="onPressedOptionsButton"]
[connection signal="pressed" from="MarginContainer/PauseMenuButtons/MainMenuButton" to="." method="onPressedMainMenuButton"]
